--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="capacitacion emprender emprendedora emprendedor empresaria empresario mentorias">
+    <meta name="description" content="Cursos, capacitaciones y mentorias de finanzas para emprendedores">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos/style.css">
-    <title>Base de datos power</title>
+    <title>Vani Brand</title>
 </head>
 <body class="body">
 
     <header>
 
-      <div class="imagenesBarra container-fluid">
+      <div class="imagenesBarra">
         <picture class="vaniHome1">
           <source media="(max-width: 500px )" srcset="images/vanihome-mobile.png">
           <source media="(max-width:1024px)" srcset="images/vanihome-tablet.png">
-          <source media="(max-width:1800px)" srcset="images/vanihome.png">
           <img class="vaniHome" src="./images/vaniHome.png" >
         </picture>
       </div>
