--- a/section/mentorias.html
+++ b/section/mentorias.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="mentorias mentora mujer desarrolo personalizada personal">
+    <meta name="description" content="Mentoria para mujeres que desean afianzarse en su emprendimiento y en su vida">
     <title>Mentorias</title>
     <link rel="shortcut icon" href="../images/Vani.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
