--- a/index.html
+++ b/index.html
@@ -7,20 +7,28 @@
     <meta name="keywords" content="capacitacion emprender emprendedora emprendedor empresaria empresario mentorias">
     <meta name="description" content="Cursos, capacitaciones y mentorias de finanzas para emprendedores">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./images/Vani.png">
     <link rel="stylesheet" href="./estilos/style.css">
     <title>Vani Brand</title>
 </head>
 <body class="body">
+ <!-- Video de fondo -->
+  <video
+
+  src = "./multimedia/fondoPetalos.mp4" autoplay="true" muted="true" loop="true" >
+
+  </video>
 
     <header>
+ <!-- imagen de arriba del nav -->
 
       <div class="imagenesBarra">
         <picture class="vaniHome1">
-          <source media="(max-width: 500px )" srcset="images/vanihome-mobile.png">
-          <source media="(max-width:1024px)" srcset="images/vanihome-tablet.png">
-          <img class="vaniHome" src="./images/vaniHome.png" >
+          <img src="./images/vaniHome.png" class="img-fluid mx-auto d-block" alt="vaniHome">
         </picture>
       </div>
+
+ <!-- Barra de menu -->
 
         <nav class="navbar navbar-expand-lg navbar-light violet">
             <div class="container-fluid">
@@ -35,12 +43,17 @@
                   <a class="nav-link" href="./section/almalider.html">Alma Lider</a>
                   <a class="nav-link" href="./section/escuela.html">Escuela</a>
                   <a class="nav-link" href="./section/mentoria.html">Mentorias</a>
+                  <a class="nav-link" href="https://www.instagram.com/vanibrand/" target="_blank"><img src="./images/logoIG.png"></a>
+                  <a class="nav-link" href="https://walink.co/6af194" target="_blank"><img src="./images/logoWP.png"></a>
                 </div>
               </div>
             </div>
           </nav>
 
     </header>
+
+ <!-- Textos centrales -->
+
     <section class="container-fluid">
       <div class="divHome1">
         <h1>Vani Brand</h1>
@@ -48,12 +61,11 @@
       </div>
     </section>
 
+ <!-- Imagen y texto de presentacion -->
+
     <section class="sectionHome2 container">
           <picture class="imagenInicio">
-            <source media="(max-width: 500px )" srcset="images/vanihome2-mobile.png">
-            <source media="(max-width:1024px)" srcset="images/vanihome2-tablet.png">
-            <source media="(max-width:1800px)" srcset="images/vanihome2.png">
-            <img class="imagenPresentacion" src="./images/vanihome2.png" alt="presentacionVaniBrand">
+            <img class="imagenPresentacion rounded-3 img-fluid " src="./images/vanihome2.png" alt="presentacionVaniBrand">
         </picture>
             <p class="intro">
               ✨Vanina encontró en la comunicación un camino hacia su propósito.
@@ -67,6 +79,8 @@
             </p>
     </section>
 
+ <!-- Carousel de los cursos -->
+
     <section>
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -76,21 +90,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./Images/baseDeDatosInicio-pc.png" class="rounded mx-auto d-block w-45" alt="...">
+            <img src="./Images/baseDeDatosInicio-pc.png" class="img-fluid rounded mx-auto d-block w-45" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>BASE DE DATOS</h5>
               <p class="pIndex">LA MEJOR BASE DE DATOS DE TU VIDA PARA CREAR CAMPAÑAS DE E-MAIL CON MI CLASE INCLUIDA </p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./Images/empAEmp2Inicio-pc.png" class="rounded mx-auto d-block w-45" alt="...">
+            <img src="./Images/empAEmp2Inicio-pc.png" class="img-fluid rounded mx-auto d-block w-45" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>DE EMPRENDEDORA A EMPRESARIA</h5>
               <p class="pIndex">Todo lo que tenés que saber para convertir tu negocio en un ingreso mensual de 6 cifras.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./Images/llevaTuNegocioInicio-pc.png" class="rounded mx-auto d-block w-45" alt="...">
+            <img src="./Images/llevaTuNegocioInicio-pc.png" class="img-fluid rounded mx-auto d-block w-45" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>LLEVA TU NEGOCIO AL PROXIMO NIVEL</h5>
               <p class="pIndex">Si te quedaste afuera del curso que hicieron más de 100 personas en Octubre. Esta es tú oportunidad.</p>
@@ -109,9 +123,13 @@
 
     </section>
 
+ <!-- footer -->
+
   <footer>
 
-    <p class="footer">Todos los derechos reservados VaniBrand (R) 2022</p>
+      <p class="footer">Todos los derechos reservados VaniBrand (R) 2022</p>
+
+    </div>
 
   </footer>
 
