--- a/section/almalider.html
+++ b/section/almalider.html
@@ -7,24 +7,32 @@
     <meta name="keywords" content="almalider liderazgo lider superacion crecimiento autoconfianza autocontrol superacion mujeres">
     <meta name="description" content="Membresia para mujeres que quieran superarse a si mismas">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../images/Vani.png">
     <link rel="stylesheet" href="../estilos/style.css">
     <title>Alma Lider</title>
 </head>
 <body class="bodyAlma">
+ <!-- Video de fondo -->
+  <video
+
+  src="../multimedia/fondoAlma.mp4" autoplay="true" muted="true" loop="true">
+
+  </video>
 
     <header>
+ <!-- imagen de arriba del nav -->
 
       <div class="imagenesBarra">
         <picture class="vaniHome1">
-            <source media="(max-width: 500px)" srcset="../images/vaniAlmaLider-mobile.png">
-            <source media="(max-width: 1024px)" srcset="../images/vaniAlmaLider-tablet.png">
-            <img class="vaniHome" src="../Images/vaniAlmaLider.png" >
+          <img src="../Images/logoAlma.png" class="imgAlma img-fluid mx-auto d-block" alt="...">
         </picture>
       </div>
 
+ <!-- Barra de menu -->
+
         <nav class="navbar navbar-expand-lg navbar-dark dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"> <img src="../Images/logo.png" alt=""></a>
+              <a class="navbar-brand" href="../index.html"> <img src="../Images/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -35,6 +43,8 @@
                   <a class="nav-link active" href="#">Alma Lider</a>
                   <a class="nav-link" href="../section/escuela.html">Escuela</a>
                   <a class="nav-link" href="../section/mentoria.html">Mentorias</a>
+                  <a class="nav-link" href="https://www.instagram.com/vanibrand/" target="_blank"><img src="../images/logoIGAlma.png"></a>
+                  <a class="nav-link" href="https://walink.co/6af194" target="_blank"><img src="../images/logoWPAlma.png"></a>
                 </div>
               </div>
             </div>
@@ -42,16 +52,39 @@
 
     </header>
 
-    
-    <div>
-        <h1 class="h1Alma">Alma Lider </h1>
+
+ <!-- Primer enlace a la pagina de AlmaLider y texto explicativo -->
+
+
+    <div class="textoAlma">
+        <a class="link" href="https://soyalmalider.com/" target="_blank">
+          <h1 class="h1Alma" >Alma Lider </h1>
+        </a>
         <h2 class="h2Alma">Sumate y subi de nivel</h2>
+        <p class="h2 mx-auto d-block"> ALMALIDER es tu oportunidad, intención y compromiso para decirle SI a todo aquello que quieras en esta vida.
+          En esta comunidad de cientos de ALMAS, sabemos que ser abundante es nuestro derecho divino,  y quiero  que vos tambien lo sepas.
+          Soñé con este momento y con muchos de los que vendrán.
+          <br>
+          GRACIAS POR TANTO
+          <br>
+          QUE LA TRANSFORMACIÓN NO PARE ❤️ </p>
+
+
+ <!-- Segundo enlace a la pagina de AlmaLider -->
+
+
+        <a class="link" href="https://soyalmalider.com/" target="_blank">
+          <p class="h4 mx-auto d-block"> Suscribite </p>
+        </a>
     </div>
 
+<!-- Imagen principal -->
 
-    <div class="imgAlma">
+    <div class="imgaAlma">
     <img src="../Images/BIENVENIDOS.png" class="img-fluid"  alt="...">
     </div>
+
+<!-- footer -->
 
     <footer>
 
