--- a/section/cursos.html
+++ b/section/cursos.html
@@ -7,24 +7,34 @@
     <meta name="keywords" content="cursos capacitacion desarrollo conocimiento">
     <meta name="description" content="Todos los cursos y las herramientas para hacer crecer tu negocio">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../images/Vani.png">
     <link rel="stylesheet" href="../estilos/style.css">
     <title>Cursos</title>
 </head>
 <body class="body">
 
+ <!-- Video de fondo -->
+
+  <video
+
+  src="../multimedia/fondoPetalos.mp4" autoplay="true" muted="true" loop="true" class="fluid">
+
+  </video>
+
     <header>
+ <!-- imagen de arriba del nav -->
 
       <div class="imagenesBarra">
         <picture class="vaniHome1">
-            <source media="(max-width: 500px)" srcset="../images/vaniCursos-mobile.png">
-            <source media="(max-width: 1024px)" srcset="../images/vaniCursos-tablet.png">
-            <img class="vaniHome" src="../Images/vaniCursos.png" >
+            <img class="vaniHome img-fluid mx-auto d-block" src="../Images/vaniCursos.png" alt="Cursos">
         </picture>
       </div>
 
+       <!-- Barra de menu -->
+
         <nav class="navbar navbar-expand-lg navbar-light violet">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"> <img src="../Images/logo.png" alt=""></a>
+              <a class="navbar-brand" href="../index.html"> <img src="../Images/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -35,6 +45,8 @@
                   <a class="nav-link" href="../section/almalider.html">Alma Lider</a>
                   <a class="nav-link" href="../section/escuela.html">Escuela</a>
                   <a class="nav-link" href="../section/mentoria.html">Mentorias</a>
+                  <a class="nav-link" href="https://www.instagram.com/vanibrand/" target="_blank"><img src="../images/logoIG.png"></a>
+                  <a class="nav-link" href="https://walink.co/6af194" target="_blank"><img src="../images/logoWP.png"></a>
                 </div>
               </div>
             </div>
@@ -42,17 +54,22 @@
 
     </header>
 
+ <!-- Texto principal -->
+
     <div>
         <h1>Cursos</h1>
     </div>
+
+ <!-- Cards con los distintos cursos -->
+
 
     <main class="container-fluid">
         <section class="row justify-content-center">
           <div class="card1 m-2" style="width: 30rem;">
             <img src="../Images/baseDeDatos.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">!!!BASE DE DATOS   POWER para vos!!!</h5>
-              <p class="card-text">LA MEJOR BASE DE DATOS DE TU VIDA PARA CREAR CAMPAÑAS DE E-MAIL CON MI CLASE INCLUIDA</p>
+              <h5 class="card-title">BASE DE DATOS   POWER</h5>
+              <p class="card-text">La mejor base de datos de tu vida, para crear campañas de E-mail marketing</p>
             </div>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Grupo de soporte en FB</li>
@@ -95,6 +112,8 @@
         </div>
         </section>
     </main>
+
+ <!-- Footer -->
 
     <footer>
 
