--- a/section/escuela.html
+++ b/section/escuela.html
@@ -7,24 +7,34 @@
     <meta name="keywords" content="educacion educar escuela cursos capacitacion">
     <meta name="description" content="Escuela de emprendedores y empresarios">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../images/Vani.png">
     <link rel="stylesheet" href="../estilos/style.css">
     <title>Escuela</title>
 </head>
 <body class="body">
 
+ <!-- Video de fondo -->
+
+  <video
+
+  src="../multimedia/fondoPetalos.mp4" autoplay="true" muted="true" loop="true">
+
+  </video>
+
     <header>
+ <!-- imagen de arriba del nav -->
 
       <div class="imagenesBarra">
         <picture class="vaniHome1">
-            <source media="(max-width: 500px)" srcset="../images/vaniEscuela-mobile.png">
-            <source media="(max-width: 1024px)" srcset="../images/vaniEscuela-tablet.png">
-            <img class="vaniHome" src="../Images/vaniEscuela.png" >
+            <img class="vaniHome img-fluid mx-auto d-block" src="../Images/vaniEscuela.png" >
         </picture>
       </div>
 
+ <!-- Barra de menu -->
+
         <nav class="navbar navbar-expand-lg navbar-light violet">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"> <img src="../Images/logo.png" alt=""></a>
+              <a class="navbar-brand" href="../index.html"> <img src="../Images/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -35,6 +45,8 @@
                   <a class="nav-link" href="../section/almalider.html">Alma Lider</a>
                   <a class="nav-link active" href="#">Escuela</a>
                   <a class="nav-link" href="../section/mentoria.html">Mentorias</a>
+                  <a class="nav-link" href="https://www.instagram.com/vanibrand/" target="_blank"><img src="../images/logoIG.png"></a>
+                  <a class="nav-link" href="https://walink.co/6af194" target="_blank"><img src="../images/logoWP.png"></a>
                 </div>
               </div>
             </div>
@@ -42,59 +54,113 @@
 
     </header>
 
+ <!-- Texto principal -->
+
     <div>
         <h1>Escuela</h1>
     </div>
 
+
+ <!-- Formulario para inscripcion a alguna carrera -->
+
+    <section class="formEscuela mx-auto d-block">
     <form class="row g-3 needs-validation" novalidate>
       <div class="col-md-4">
         <label for="validationCustom01" class="form-label">Nombre</label>
         <input type="text" class="form-control" id="validationCustom01" value="Vani" required>
         <div class="valid-feedback">
-          Looks good!
+          Que lindo nombre!
         </div>
       </div>
       <div class="col-md-4">
         <label for="validationCustom02" class="form-label">Apellido</label>
         <input type="text" class="form-control" id="validationCustom02" value="Brand" required>
         <div class="valid-feedback">
-          Looks good!
+          Gracias!
         </div>
       </div>
       <div class="col-md-4">
         <label for="validationCustomUsername" class="form-label">Instagram</label>
         <div class="input-group has-validation">
           <span class="input-group-text" id="inputGroupPrepend">@</span>
-          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" value= "VaniBrand" required>
           <div class="invalid-feedback">
-            Please choose a username.
+            Por favor, pone tu usuario de instagram.
           </div>
         </div>
       </div>
       <div class="col-md-6">
-        <label for="validationCustom03" class="form-label">Provincia</label>
-        <input type="text" class="form-control" id="validationCustom03" required>
+        <label for="validationCustom04" class="form-label">Carrera a estudiar</label>
+        <select class="form-select" id="validationCustom04" required>
+          <option selected disabled value="">Seleccionar</option>
+          <option>Marketing Digital</option>
+          <option>Community Manager</option>
+          <option>Experta en Ventas</option>
+          <option>Otra</option>
+
+        </select>
+        <div class="invalid-feedback">
+          Por favor elija una carrera valida.
+        </div>
+      </div>
+
+        <div class="col-md-6">
+          <label for="validationCustom05" class="form-label">Mes de inicio</label>
+          <select class="form-select" id="validationCustom05" required>
+            <option selected disabled value="">Seleccionar</option>
+            <option>Enero</option>
+            <option>Febrero</option>
+            <option>Marzo</option>
+            <option>Abril</option>
+            <option>Mayo</option>
+            <option>Junio</option>
+            <option>Julio</option>
+            <option>Agosto</option>
+            <option>Septiembre</option>
+            <option>Octubre</option>
+            <option>Noviembre</option>
+
+          </select>
+          <div class="invalid-feedback">
+            Por favor elija un mes valido.
+          </div>
+      </div>
+
+      <div class="col-md-6">
+        <label for="validationCustom06" class="form-label">Telefono</label>
+        <input type="text" class="form-control" id="validationCustom06" value="(+54) 11-12345678" required>
+        <div class="invalid-feedback">
+          Por favor introduzca su telefono.
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <label for="validationCustom06" class="form-label">Provincia</label>
+        <input type="text" class="form-control" id="validationCustom06" required>
         <div class="invalid-feedback">
           Por favor elija una provincia valida.
         </div>
       </div>
-      <div class="col-md-3">
-        <label for="validationCustom04" class="form-label">Ciudad</label>
-        <select class="form-select" id="validationCustom04" required>
-          <option selected disabled value="">Choose...</option>
+
+      <div class="col-md-4">
+        <label for="validationCustom07" class="form-label">Ciudad</label>
+        <select class="form-select" id="validationCustom07" required>
+          <option selected disabled value="">Seleccionar</option>
           <option>...</option>
         </select>
         <div class="invalid-feedback">
           Por favor elija una ciudad valida.
         </div>
       </div>
-      <div class="col-md-3">
-        <label for="validationCustom05" class="form-label">C.P.</label>
-        <input type="text" class="form-control" id="validationCustom05" required>
+
+      <div class="col-md-6">
+        <label for="validationCustom08" class="form-label">C.P.</label>
+        <input type="text" class="form-control" id="validationCustom08" required>
         <div class="invalid-feedback">
           Por favor introduce un codigo postal valido.
         </div>
       </div>
+
       <div class="col-12">
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
@@ -106,10 +172,14 @@
           </div>
         </div>
       </div>
+
       <div class="col-12">
         <button class="btn btn-primary" type="submit">Enviar formulario</button>
       </div>
     </form>
+  </section>
+
+ <!-- Footer -->
 
     <footer>
 
