--- a/section/mentoria.html
+++ b/section/mentoria.html
@@ -4,25 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="mentorias mentora mujer desarrolo personalizada personal">
+    <meta name="description" content="Mentoria para mujeres que desean afianzarse en su emprendimiento y en su vida">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="shortcut icon" href="../images/Vani.png">
     <link rel="stylesheet" href="../estilos/style.css">
     <title>Mentorias</title>
 </head>
 <body class="body">
+ <!-- Video de fondo -->
+
+  <video
+
+  src="../multimedia/fondoPetalos.mp4" autoplay="true" muted="true" loop="true">
+
+  </video>
 
     <header>
+ <!-- imagen de arriba del nav -->
 
       <div class="imagenesBarra">
         <picture class="vaniHome1">
-            <source media="(max-width: 500px)" srcset="../images/vaniMentorias-mobile.png">
-            <source media="(max-width: 1024px)" srcset="../images/vaniMentorias-tablet.png">
-            <img class="vaniHome" src="../Images/vaniMentorias.png" >
+            <img class="vaniHome img-fluid mx-auto d-block" src="../Images/vaniMentorias.png" >
         </picture>
       </div>
 
+ <!-- Barra de menu -->
+
         <nav class="navbar navbar-expand-lg navbar-light violet">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"> <img src="../Images/logo.png" alt=""></a>
+              <a class="navbar-brand" href="../index.html"> <img src="../Images/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -33,6 +44,8 @@
                   <a class="nav-link" href="../section/almalider.html">Alma Lider</a>
                   <a class="nav-link" href="../section/escuela.html">Escuela</a>
                   <a class="nav-link active" href="#">Mentorias</a>
+                  <a class="nav-link" href="https://www.instagram.com/vanibrand/" target="_blank"><img src="../images/logoIG.png"></a>
+                  <a class="nav-link" href="https://walink.co/6af194" target="_blank"><img src="../images/logoWP.png"></a>
                 </div>
               </div>
             </div>
@@ -40,43 +53,61 @@
 
     </header>
 
+ <!-- Texto principal -->
+
     <div>
         <h1>Mentorias</h1>
     </div>
 
+ <!-- Formulario de mentorias individuales -->
+    
+    <div>
+      <h2>Individual</h2>
+      <p class="descIndividual mx-auto d-block">Consta de 4 encuentros personales con Vani, vía zoom, de una hora de duración. Los cuales se desarrollaran uno por semana.</p>
+    </div>
+    <section class="formMentoria  mx-auto d-block">
     <form class="row g-3 needs-validation" novalidate>
         <div class="col-md-4">
           <label for="validationCustom01" class="form-label">Nombre</label>
           <input type="text" class="form-control" id="validationCustom01" value="Vani" required>
           <div class="valid-feedback">
-            Looks good!
+            Gracias!
           </div>
         </div>
         <div class="col-md-4">
           <label for="validationCustom02" class="form-label">Apellido</label>
           <input type="text" class="form-control" id="validationCustom02" value="Brand" required>
           <div class="valid-feedback">
-            Looks good!
+            Gracias!
           </div>
         </div>
         <div class="col-md-4">
           <label for="validationCustomUsername" class="form-label">Instagram</label>
           <div class="input-group has-validation">
             <span class="input-group-text" id="inputGroupPrepend">@</span>
-            <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+            <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" value="VaniBrand" required>
             <div class="invalid-feedback">
               Please choose a username.
             </div>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
+          <label for="validationCustomUsername" class="form-label">Telefono</label>
+          <div class="input-group has-validation">
+            <input type="text" class="form-control" id="validationCustomUsername" value="(+54) 11-12345678" required>
+            <div class="invalid-feedback">
+              Introduce tu telefono.
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
           <label for="validationCustom03" class="form-label">Provincia</label>
           <input type="text" class="form-control" id="validationCustom03" required>
           <div class="invalid-feedback">
             Por favor elija una provincia valida.
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <label for="validationCustom04" class="form-label">Ciudad</label>
           <select class="form-select" id="validationCustom04" required>
             <option selected disabled value="">Choose...</option>
@@ -108,6 +139,101 @@
           <button class="btn btn-primary" type="submit">Enviar formulario</button>
         </div>
       </form>
+    </section>
+
+ <!-- Formulario de mentorias grupales -->
+
+      <div>
+        <h2>Grupal</h2>
+        <p class="descGrupal mx-auto d-block">Consta de 4 encuentros con Vani y tu equipo completo, vía zoom, de una hora de duración. Los cuales se desarrollaran uno por semana.</p>
+      </div>
+
+      <section class="formMentoria  mx-auto d-block">
+      <form class="row g-3 needs-validation" novalidate>
+          <div class="col-md-4">
+            <label for="validationCustom01" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="validationCustom01" value="Vani" required>
+            <div class="valid-feedback">
+              Gracias!
+            </div>
+          </div>
+          <div class="col-md-4">
+            <label for="validationCustom02" class="form-label">Apellido</label>
+            <input type="text" class="form-control" id="validationCustom02" value="Brand" required>
+            <div class="valid-feedback">
+              Gracias!
+            </div>
+          </div>
+          <div class="col-md-4">
+            <label for="validationCustomUsername" class="form-label">Instagram</label>
+            <div class="input-group has-validation">
+              <span class="input-group-text" id="inputGroupPrepend">@</span>
+              <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" value="VaniBrand" required>
+              <div class="invalid-feedback">
+                Introduce tu instagram.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <label for="validationCustomUsername" class="form-label">Telefono</label>
+            <div class="input-group has-validation">
+              <input type="text" class="form-control" id="validationCustomUsername" value="(+54) 11-12345678" required>
+              <div class="invalid-feedback">
+                Introduce tu telefono.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <label for="validationCustomUsername" class="form-label">Tamaño del equipo</label>
+            <div class="input-group has-validation">
+              <input type="text" class="form-control" id="validationCustomUsername" value="Cantidad en números" required>
+              <div class="invalid-feedback">
+                Introduce un numero.
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <label for="validationCustom03" class="form-label">Provincia</label>
+            <input type="text" class="form-control" id="validationCustom03" required>
+            <div class="invalid-feedback">
+              Por favor elija una provincia valida.
+            </div>
+          </div>
+          <div class="col-md-4">
+            <label for="validationCustom04" class="form-label">Ciudad</label>
+            <select class="form-select" id="validationCustom04" required>
+              <option selected disabled value="">Choose...</option>
+              <option>...</option>
+            </select>
+            <div class="invalid-feedback">
+              Por favor elija una ciudad valida.
+            </div>
+          </div>
+          <div class="col-md-3">
+            <label for="validationCustom05" class="form-label">C.P.</label>
+            <input type="text" class="form-control" id="validationCustom05" required>
+            <div class="invalid-feedback">
+              Por favor introduce un codigo postal valido.
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+              <label class="form-check-label" for="invalidCheck">
+                  Acepto los terminos y condiciones.
+              </label>
+              <div class="invalid-feedback">
+                  Debes aceptar los terminos y condiciones.
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <button class="btn btn-primary" type="submit">Enviar formulario</button>
+          </div>
+        </form>
+      </section>
+
+ <!-- Footer -->
 
       <footer>
 
